gap fix nell'aside, dropdown a lato di Aggiunti di recente(da stilizzare meglio)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,10 @@ a {
   gap: 8px;
 }
 
+.plus-arrow:hover {
+  background-color: #2a2a2a;
+}
+
 #pl-al-ar button {
   border-radius: 20px;
   border: none;
